--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -13,16 +13,19 @@
   --blue-4: #26557A;
   --blue-5: #283958;
   --blue-5-transparent: #2839589c;
+  --orange-1: #ED541C;
   --light-white: #FBFBFB;
   --standard-white: #ffffff;
   --standard-black: #000000;
   --standard-gray: #1f1d1d;
   --std-white-transparent: rgba(255, 255, 255, 0.288);
   --std-white-transparent-2: rgba(255, 255, 255, 0.548);
+  --font-montserrat: 'Montserrat', sans-serif;
+  --font-oswald: 'Oswald', sans-serif;
 }
 
 html, body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--font-montserrat);
   height: 100%;
 }
 
@@ -57,6 +60,12 @@ html, body {
   transition: all 300ms ease;
 }
 
+.is_animated {
+  animation-name: to-show-logo;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
 /* ###### END GENERICS ######*/
 
 /* START BODY */
@@ -78,43 +87,26 @@ html, body {
 /* ###### END BODY ###### */
 
 /* START HEADER */
+.C-header {
+  padding-bottom: 20px;
+  min-height: 100vh;
+}
 .C-header_contact {
   grid-area: header;
-  background-color: var(--std-white-transparent);
+  background-color: var(--std-white-transparent-2);
   opacity: 0.8;
-  padding: 5px 0;
+  padding: 10px 0;
   text-align: center;
   column-gap: 15px;
 }
 
-.C-header_whatsapp {
-  column-gap: 15px;
-  font-size: 18px;
-  color: var(--standard-black);
-  background-color: rgba(255, 255, 255, 0.507);
-  padding: 5px 5px 3px 5px;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.C-header_whatsapp:hover {
-  background-color: var(--light-white);
-}
-
-.C-header_whatsapp a {
-  text-decoration: none;
-  column-gap: 5px;
-}
-/*  */
-
-/* START MAIN */
-.C-main {
-  grid-area: main;
+.C-header_contact > a > img {
+  max-width: 32px;
 }
 
 .C-menu {
-  justify-content: flex-end;
-  padding: 45px 10px 0 0;
+  justify-content: space-between;
+  padding: 45px 10px;
 }
 
 .C-menu__ul {
@@ -130,7 +122,7 @@ html, body {
 .C-menu__li a {
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 400;
   letter-spacing: 1.5px;
   padding: 8px;
@@ -145,22 +137,58 @@ html, body {
 
 .C-logo {
   width: 100%;
-  max-width: 450px;
+  max-width: 64px;
 }
 
 .C-logo img {
   filter: opacity(200%) contrast(110%) brightness(250%) drop-shadow(16px 16px 25px black);
   width: 100%;
-  animation-name: to-show-logo;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+}
+
+.C-title {
+  max-width: 450px;
+  color: var(--standard-white);
+  padding: 0 10px;
+  text-transform: uppercase;
+  font-family: var(--font-oswald);
+  font-size: 68px;
+  font-weight: 700;
+  font-style: italic;
+  letter-spacing: 3px;
+}
+
+.C-title__span {
+  color: var(--blue-3);
+  filter: drop-shadow(-5px 10px 25px black);
+}
+
+.C-title__link {
+  font-family: var(--font-montserrat);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 25px 35px;
+  border-radius: 50px;
+  color: var(--standard-white);
+  background-color: var(--orange-1);
+  align-self: flex-start;
+}
+/* END HEADER */
+
+/* START MAIN */
+.C-main {
+  grid-area: main;
 }
 
 .C-intro {
+  max-width: 840px;
   padding: 2%;
-  background-color: rgba(255, 255, 255, 0.74);
+  margin-bottom: 30px;
   overflow: hidden;
+  background: rgba(105, 102, 102, 0.295);
+  backdrop-filter: contrast(4) blur(15px);
 }
 
 .C-intro__title, .C-intro__description {
@@ -169,25 +197,26 @@ html, body {
 }
 
 .C-intro__title {
-  font-size: 48px;
+  font-size: 38px;
   font-weight: 600;
   font-style: italic;
   letter-spacing: 5px;
-  line-height: 55pt;
-  color: var(--blue-5);
+  line-height: 45pt;
+  color: var(--blue-2);
   max-width: 650px;
   padding-bottom: 10px;
 }
 
 .C-intro__description {
+  color: var(--standard-white);
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 300;
   line-height: 28pt;
   max-width: 550px;
 }
 
 .C-intro__card {
-  max-width: 800px;
+  max-width: 640px;
   background-color: var(--blue-4);
   margin: 10px 0;
   padding: 20px;
@@ -233,8 +262,7 @@ html, body {
 }
 
 .C-profile_description {
-  max-width: 600px;
-  font-size: 18px;
+  max-width: 400px;
   line-height: 27pt;
   color: var(--standard-white);
   padding: 30px 0;
@@ -244,8 +272,8 @@ html, body {
   color: var(--blue-2);
   text-transform: capitalize;
   font-weight: 400;
-  font-size: 45px;
-  line-height: 60pt;
+  font-size: 38px;
+  line-height: 40pt;
 }
 
 .C-profile_description p {
@@ -258,10 +286,10 @@ html, body {
 
 .C-profile_image {
   width: 100%;
-  max-width: 400px;
+  max-width: 280px;
   height: 100%;
   position: relative;
-  top: -70px;
+  top: -60px;
 }
 
 .C-profile_image img {
@@ -291,7 +319,7 @@ html, body {
 }
 
 .C-pre_gallery_images {
-  max-width: 600px;
+  max-width: 400px;
   position: relative;
 }
 
@@ -328,7 +356,7 @@ html, body {
 }
 
 .C-pre_gallery_li input:checked ~ label {
-  background-color: var(--standard-gray);
+  background-color: var(--standard-black);
 }
 
 .C-pre_gallery_li img {
@@ -368,19 +396,39 @@ html, body {
 
 .C-services {
   width: 100%;
-  background-color: var(--standard-white);
-  background-image: linear-gradient(-25deg, var(--light-white) 50%, var(--blue-0) 50%);
-  padding: 30px;
+  padding-bottom: 30px;
   border: none;
   outline: none;
+  background: rgba(105, 102, 102, 0.295);
+  backdrop-filter: contrast(1) blur(15px);
+}
+
+.C-services h2 {
+  margin: 30px 0;
 }
 
 .C-services__flex {
-  background-color: var(--std-white-transparent-2);
-  border: 1px solid var(--std-white-transparent-2);
+  flex-wrap: wrap;
+  column-gap: 25px;
+  row-gap: 25px;
+}
+
+.C-services__service {
+  max-width: 250px;
+  text-align: center;
+  border: 2px solid var(--std-white-transparent-2);
+  padding: 20px;
   border-radius: 15px;
-  padding: 2% 2%;
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.116);
+}
+
+.C-services__service h2 {
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--standard-white);
+}
+
+.C-services__service p {
+  color: var(--std-white-transparent-2);
 }
 
 /* END MAIN */
