feat: created the ultimate feat

--- a/app_home/templates/app_home/pages/home.html
+++ b/app_home/templates/app_home/pages/home.html
@@ -61,7 +61,7 @@
     <main class="C-main">
         <!-- section intro -->
         <section class="C-intro center_flex_column center_margin">
-            <h1 class="C-intro__title">Benefícios de treinar com o Personal Maicon</h1>
+            <h1 class="C-intro__title">Benefícios do nosso treino</h1>
             <p class="C-intro__description">A prática regular de atividade física, com o acompanhamento de um profissional especializado, trás ínumeros benefícios, dentre eles:</p>
             <div class="C-intro__card">
                 <h2 class="C-intro__card_title">
@@ -139,7 +139,11 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
                     <div class="C-services__service">
-                        <h2>horários flexíveis</h2>
+                        <h2>treino em equipe</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
+                    </div>
+                    <div class="C-services__service">
+                        <h2>equipamentos de ponta</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
                     <div class="C-services__service">
@@ -147,21 +151,45 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
                     <div class="C-services__service">
-                        <h2>equipamentos...</h2>
+                        <h2>horários flexíveis</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>
                     <div class="C-services__service">
-                        <h2>Lorem ipsum</h2>
+                        <h2>localização central</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, voluptatum?</p>
                     </div>  
                 </div>
             </section>
         </section>
 
+        <!-- contact and localization -->
+        <section class="C-contact center_flex_row">
+            <div class="C-contact__contact center_flex_column">
+                <h2>entre em contato</h2>
+                <a href="" class="C-contact__link center_flex_row"><img src="{% static 'global/images/facebook.png' %}" alt="logo facebook"><p>@maicon_jose</p></a>
+                <a href="" class="C-contact__link center_flex_row"><img src="{% static 'global/images/instagram.png' %}" alt="logo instagram"><p>@maicon_jose</p></a>
+                <a href="" class="C-contact__link center_flex_row"><img src="{% static 'global/images/whatsapp.png' %}" alt="logo whatsapp"><p>(46) 9 9982-6472</p></a>
+                <p>Fone: (46) 9 9982-6472</p>
+            </div>
+            <div class="C-contact__localization">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3583.522754172879!2d-53.05904328504772!3d-26.081849083492397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f072d9fc39f61b%3A0x8fec623d0f0908ca!2sR.%20Rio%20G.%20do%20Sul%2C%201086%20-%20Alvorada%2C%20Francisco%20Beltr%C3%A3o%20-%20PR%2C%2085601-050!5e0!3m2!1spt-BR!2sbr!4v1677199562174!5m2!1spt-BR!2sbr" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
-    <footer class="C-footer"></footer>
+    <footer class="C-footer center_flex_row">
+        <div class="C-footer__details">
+            <p class="C-footer__title">Academia Personal Maicon</p>
+            <p class="C-footer__adress">Rua Rio Grande do Sul, 1086</p>
+            <p class="C-footer__adress">Centro - Francisco Beltrão, Paraná</p>
+            <p class="C-footer__adress">CEP: 85.601-231</p>
+            <p class="C-footer__copy"> &copy; 2023 - Todos os direitos reservados</p>
+        </div>
+        <div class="C-footer__logo">
+            <img src="{% static 'global/images/logo.png' %}" alt="">
+        </div>
+    </footer>
 </body>
     <script src="{% static 'global/js/script.js' %}"></script>
 </body>
